# R-Type

./: CMakeLists.txt  Doxyfile  README.md  conanfile.txt  script.sh
doc/: network_protocol.txt
include/: DyLib.hpp  Random.hpp  ThreadPool.hpp  Tools.hpp
include/ECS/: Components.hpp  Entity.hpp  Exception.hpp  Module.hpp  Registry.hpp  SparseArray.hpp  Systems.hpp
include/Network/: Client.hpp  Header.hpp  Packet.hpp  Server.hpp  Socket.hpp  Type.hpp
include/UI/: Core.hpp  Data.hpp  Game.hpp  Inputbox.hpp  Lobby.hpp  Menu.hpp  Profile.hpp  SpriteSize.hpp  Spritesheet.hpp  Status.hpp  Textbox.hpp
src/Client/: CMakeLists.txt  main.cpp
src/Client/UI/: Core.cpp  Data.cpp  Game.cpp  Inputbox.cpp  Lobby.cpp  Menu.cpp  Profile.cpp  Spritesheet.cpp  Textbox.cpp
src/Server/: CMakeLists.txt  GameLoop.cpp  ServerCore.cpp  ServerCore.hpp  main.cpp
src/Server/Entities/: Block.cpp  CMakeLists.txt  Cyborg.cpp  Plane.cpp
tests/: CMakeLists.txt
tests/DyLib/: tests.cpp
tests/ECS/: tests.cpp
tests/Network/: tests.cpp
tests/cmake/: BuildDynLib.cmake  FindASIO.cmake  FindGTest.cmake
